<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_dialog_enter_city_name"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:forceDarkAllowed="false"
    android:background="@color/main_activity_main_layout">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="5dp"
        android:padding="2dp"
        android:text="@string/enter_city_name"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/editTextFragmentEnterCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:hint="@string/city_name_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonFragmentNegative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@drawable/fragment_round_button"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/buttonFragmentPositive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@drawable/fragment_round_button"
            android:textColor="@color/white"
            android:text="@string/ok_button" />
    </LinearLayout>
</LinearLayout>