<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:forceDarkAllowed="false">

    <Button
        android:id="@+id/buttonMainActivityCityInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/main_activity_round_button"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/main_activity_main_layout"
        android:onClick="onClickChangeCityName"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1"
        android:background="@drawable/main_activity_round_layout"
        android:elevation="4dp"
        android:orientation="vertical"
        android:translationZ="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="100"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewMainActivityWeatherTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textSize="70sp"
                    android:textStyle="bold"
                    android:theme="@style/MainActivityTextViewStyle"
                    android:onClick="onClickShowHourlyFragment"/>

                <TextView
                    android:id="@+id/textViewMainActivityWeatherTemperatureFeelsLikeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:padding="1dp"
                    android:text="@string/weather_feels_like"
                    android:textSize="15sp"
                    android:theme="@style/MainActivityTextViewStyle"
                    android:onClick="onClickShowHourlyFragment"/>

                <TextView
                    android:id="@+id/textViewMainActivityWeatherTemperatureFeelsLikeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:padding="2dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:theme="@style/MainActivityTextViewStyle"
                    android:onClick="onClickShowHourlyFragment"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewWeatherIcon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:elevation="3dp"
                    android:translationZ="2dp"
                    app:srcCompat="@drawable/ic_clear_day"
                    android:onClick="onClickShowHourlyFragment"/>

                <TextView
                    android:id="@+id/textViewMainActivityWeatherDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="10dp"
                    android:padding="2dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:theme="@style/MainActivityTextViewStyle"
                    android:onClick="onClickShowHourlyFragment"/>
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/topDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:onClick="onClickShowHourlyFragment">

                <TextView
                    android:id="@+id/textViewMainActivityWeatherCloudsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:padding="2dp"
                    android:text="@string/weather_clouds"
                    android:textSize="15sp"
                    android:theme="@style/MainActivityTextViewStyle"
                    android:onClick="onClickShowHourlyFragment"/>

                <TextView
                    android:id="@+id/textViewMainActivityWeatherCloudsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="2dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:theme="@style/MainActivityTextViewStyle"
                    android:onClick="onClickShowHourlyFragment"/>
            </LinearLayout>

            <View
                android:id="@+id/botDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textViewMainActivityWeatherPressureText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:padding="2dp"
                        android:text="@string/weather_pressure"
                        android:textSize="15sp"
                        android:theme="@style/MainActivityTextViewStyle"
                        android:onClick="onClickShowHourlyFragment"/>

                    <TextView
                        android:id="@+id/textViewMainActivityWeatherPressureValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:padding="2dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:theme="@style/MainActivityTextViewStyle"
                        android:onClick="onClickShowHourlyFragment"/>

                    <TextView
                        android:id="@+id/textViewMainActivityWeatherHumidityText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:padding="2dp"
                        android:text="@string/weather_humidity"
                        android:textSize="15sp"
                        android:theme="@style/MainActivityTextViewStyle"
                        android:onClick="onClickShowHourlyFragment"/>

                    <TextView
                        android:id="@+id/textViewMainActivityWeatherHumidityValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:padding="2dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:theme="@style/MainActivityTextViewStyle"
                        android:onClick="onClickShowHourlyFragment"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="5dp">


                    <TextView
                        android:id="@+id/textViewMainActivityWeatherWindSpeedText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:padding="2dp"
                        android:text="@string/weather_wind_speed"
                        android:textSize="15sp"
                        android:theme="@style/MainActivityTextViewStyle"
                        android:onClick="onClickShowHourlyFragment"/>

                    <TextView
                        android:id="@+id/textViewMainActivityWeatherWindSpeedValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:padding="2dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:theme="@style/MainActivityTextViewStyle"
                        android:onClick="onClickShowHourlyFragment"/>

                    <TextView
                        android:id="@+id/textViewMainActivityWindGustText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:padding="2dp"
                        android:text="@string/weather_wind_gust"
                        android:textSize="15sp"
                        android:theme="@style/MainActivityTextViewStyle"
                        android:onClick="onClickShowHourlyFragment"/>

                    <TextView
                        android:id="@+id/textViewMainActivityWindGustValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:padding="2dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:theme="@style/MainActivityTextViewStyle"
                        android:onClick="onClickShowHourlyFragment"/>


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_marginBottom="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMainActivityDailyWeather"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

</LinearLayout>


